--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/maurogamboa/csv-upload-api#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "csv-parser": "^3.0.0",
+    "express": "^4.17.1",
+    "formidable": "^1.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/formidable": "^1.2.1",
     "@types/node": "^14.14.41",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
